# intuitive_thinker

./: README.md  env.sample  intuitive_thinker_demo.ipynb  license.txt  ollamachatbot.sh  pyproject.toml  requirements.txt
intuitive_thinker/: llama_thinker.py  mental_model.py  model_cirtical_thinking_prompt.py  model_iceberg_prompts.py  model_nonlinear_prompts.py  model_second_order_thinking_prompts.py  model_stocks_and_flows_prompts.py  model_think_cot_reflect_prompt.py  model_thinking_fast_and_slow_prompt.py  ollama_chatbot.py  ollama_thinker.py  sample_questions.py
samples/: test_api.py
